--- a/_config.yml
+++ b/_config.yml
@@ -28,10 +28,10 @@ baseurl: ""
 # Website Header, Description, Footer year and text. 
 # If you are deleting this, make sure you remove it from HTML files too 
 heading: juanalbglz.work # Change this 
-content: Personal thoughts and notes
+content: Pensamientos y notas personales
 copyright:  
   year: © 2022
-  msg: Contents under CC-BY-NC 
+  msg: CC-BY-NC 
 
 # Set title and content for private & broken link tooltip
 privatelinks:
@@ -66,15 +66,18 @@ plugins:
 ## Enable Collections
 ## Suggested collects are "notes" "lists" and "blog"
 collections:
-    notes:
+    notas:
       output: true
-      permalink: /note/:title
-    lists:
+      permalink: /nota/:title
+    listas:
       output: true
-      permalink: /list/:title
+      permalink: /lista/:title
     blog:
       output: true
       permalink: /blog/:title
+    cursos:
+      output: true
+      permalink: /cursos/:title
 
 markdown: kramdown
 
